syntax = "proto3";

package svr_stream;

option go_package="./svr_streampb";


message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

message GreetManyTimeRequest{
    Greeting greeting = 1;
}

message GreetManyTimeResponse{
 string result = 1;
}

service GreetingService{
     //Server Straming
    rpc GreetManyTimes(GreetManyTimeRequest) returns (stream GreetManyTimeResponse) {};
}